# Rust_Repository

./: README.md
Counting_Crate/: Cargo.toml
Counting_Crate/src/: lib.rs
